--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: biu
 description: 在可预见的未来里，大家都是沙雕
-url: https://biuy.github.io
+url: https://taylantatli.github.io/Halve
 logo: halve.png                                       # Site logo
 locale: en_US
 
