--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: Halve
 description: Stylish, Two-Column Jekyll Theme
-url: https://biu.github.io
+url: https://biuy.github.io/Halve
 logo: halve.png                                       # Site logo
 locale: en_US
 
