--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: biu
 description: Stylish, Two-Column Jekyll Theme
-url: https://biuy.github.io/Halve
+url: https://biuy.github.io
 logo: halve.png                                       # Site logo
 locale: en_US
 
