--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@
 title: biu
 description: Stylish, Two-Column Jekyll Theme
 url: https://biuy.github.io
-logo: halve.png                                       # Site logo
+logo: halve.jpeg                                      # Site logo
 locale: en_US
 
 # Left Block Images
 background:
-  homepage: images/home.png                           # this image will be shown on homepage's left block
-  post-list: images/unsplash-image-10.jpg             # this image will be shown on post list page
-  default-post: images/unsplash-gallery-image-3.jpg   # this image will be shown when post's front matter doesn't specify any image
+  homepage: images/home.jpg                           # this image will be shown on homepage's left block
+  post-list: images/home.jpg             # this image will be shown on post list page
+  default-post: images/post.jpg   # this image will be shown when post's front matter doesn't specify any image
 
 # Jekyll
 permalink:          /:title/
