--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ steam:              <biu></biu>
 #xmpp:              username@server.com
 #hackernews:        username
 #behance:           username
+tencent:            819774119
+wechat:             Darkgoldenrod
 
 # Gems
 gems:
