--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ sass:
 email:             atbybiu@gmail.com
 #google.plus:        username
 #twitter:            username
-#facebook:           username
+#facebook:           biyu
 github:             biuy
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
