--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,29 +1,24 @@
-- title: Halve Jekyll Theme
-  url: http://taylantatli.me/Halve
-  image: http://taylantatli.me/Halve/images/halve-home-image.png
-  completed: false
-
-- title: Moon Jekyll Theme
-  url: http://taylantatli.me/Moon
-  image: https://cloud.githubusercontent.com/assets/754514/14509720/61c61058-01d6-11e6-93ab-0918515ecd56.png
+- title: 二进制密码输入
+  url: http://home.ustc.edu.cn/~biu/signin/
+  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzauosppmij30u011dtbk.jpg
   completed: true
 
-- title: Ramme Jekyll Theme
-  url: http://taylantatli.me/Ramme
-  image: https://raw.githubusercontent.com/TaylanTatli/Ramme/master/assets/img/screenshot-post.png
+- title: 人类的本质-丽琪使用说明
+  url: http://home.ustc.edu.cn/~biu/liqi/help/
+  image: https://ws2.sinaimg.cn/large/006tNc79ly1fzaur5bmb9j30u00zv79t.jpg
   completed: true
 
-- title: Daisy Pelican Theme
-  url: http://taylantatli.me/Daisy-Pelican-Theme/
-  image: https://raw.githubusercontent.com/TaylanTatli/Daisy-Pelican-Theme/master/Preview-1.png
+- title: 西瓜提醒
+  url: https://github.com/biuy/
+  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzautze4iqj30i00ck3zd.jpg
   completed: true
 
-- title: Block Icon Theme
-  url: https://github.com/TaylanTatli/Block-Icon-Theme
-  image: https://raw.githubusercontent.com/TaylanTatli/Block-Icon-Theme/master/Preview.png
-  completed: false
+- title: Javaweb开发图书管理系统
+  url: https://github.com/biuy/Javaweb-database
+  image: https://ws4.sinaimg.cn/large/006tNc79ly1fzauyihzjyj30p60h2juw.jpg
+  completed: true
 
-- title: Start Page
-  url: http://taylantatli.me/StartPage/
-  image: https://raw.githubusercontent.com/TaylanTatli/StartPage/master/preview.png
-  completed: false
+- title: macOS的扫雷逆向破解
+  url: https://github.com/biuy/macOS-Reverse
+  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzauzte9jdj30ty0l6gtw.jpg
+  completed: true
