--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ github:             biuy
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              biu_yu
+steam:              <biu><biu>
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
