--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ github:             biuy
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              <biu><biu>
+steam:              76561198843500392
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
@@ -53,6 +53,7 @@ steam:              <biu><biu>
 #xmpp:              username@server.com
 #hackernews:        username
 #behance:           username
+tencent：            819774119
 
 # Gems
 gems:
