--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ steam:              76561198843500392
 #xmpp:              username@server.com
 #hackernews:        username
 #behance:           username
-tencent：            819774119
+tencent:            819774119
 
 # Gems
 gems:
