--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Google Analytics
-#google-analytics: UA-XXXXX-Y
+google-analytics: UA-132791685-1
 
 # Social Links
 email:             atbybiu@gmail.com
