--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ tencent:            819774119
 #leancloud
 leancloud:
   enable: true
-  app_id: xxxxxxxxxxxxxxx
-  app_key: xxxxxxxxxxxxxxx
+  app_id: zPptrtDxhlgQyT7PEajXSIqT-gzGzoHsz
+  app_key: 1il3vLoFdaPdUuFjMljMNxmv
 
 
 
