--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,24 +1,14 @@
-- title: 二进制密码输入
-  url: http://home.ustc.edu.cn/~biu/signin/
-  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzauosppmij30u011dtbk.jpg
-  completed: true
-
 - title: 人类的本质-丽琪使用说明
   url: http://home.ustc.edu.cn/~biu/liqi/help/
-  image: https://ws2.sinaimg.cn/large/006tNc79ly1fzaur5bmb9j30u00zv79t.jpg
-  completed: true
-
-- title: 西瓜提醒
-  url: https://github.com/biuy/
-  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzautze4iqj30i00ck3zd.jpg
+  image: images/liqi.jpeg
   completed: true
 
 - title: Javaweb开发图书管理系统
   url: https://github.com/biuy/Javaweb-database
-  image: https://ws4.sinaimg.cn/large/006tNc79ly1fzauyihzjyj30p60h2juw.jpg
+  image: images/github.jpg
   completed: true
 
 - title: macOS的扫雷逆向破解
   url: https://github.com/biuy/macOS-Reverse
-  image: https://ws1.sinaimg.cn/large/006tNc79ly1fzauzte9jdj30ty0l6gtw.jpg
+  image: images/github.jpg
   completed: true
